# gd32-pio-wifi-sdk

./: CMakeLists.txt  gcc_build_ns.bat  gcc_download_ns.bat  package.json  release_notes.txt
GD32W51x_Addon/: GigaDevice.GD32W51x_DFP_1.0.2.pack
GD32W51x_Addon/GigaDevice.GD32W51x_DFP_1.0.2/: GigaDevice.GD32W51x_DFP.pdsc
GD32W51x_Addon/GigaDevice.GD32W51x_DFP_1.0.2/Flash/: GD32W515_Ext_NS_2M.FLM  GD32W515_Ext_S_2M.FLM  GD32W515_NS.FLM  GD32W515_S.FLM
MBL/project/: mbl_afterbuild.bat  mbl_afterbuild_adv.bat
MBL/project/IAR/: Project_MBL.ewd  Project_MBL.ewp  Project_MBL_NS.ewd  Project_MBL_NS.ewp
MBL/project/KEIL/: Project_MBL.uvprojx  Project_MBL_NS.uvoptx  Project_MBL_NS.uvprojx
MBL/source/: mbl_target_config.c
MBL/source_ns/: mbl_api.c  mbl_api.h  mbl_flash.c  mbl_flash.h  mbl_ns.c  mbl_qspi_flash.c
NSPE/: CMakeLists.txt
NSPE/Firmware/CMSIS/: CMakeLists.txt
NSPE/Project/WIFI_IOT/: nspe_afterbuild.bat  nspe_afterbuild_tz.bat  wifi_version.bat
NSPE/Template/: main.c
NSPE/Template_TrustZone/Secure/: main.c  partition_gd32w51x.h
NSPE/Utilities/: gd32w515p_eval.c  gd32w515p_eval.h
NSPE/WIFI_IOT/: CMakeLists.txt
NSPE/WIFI_IOT/FatFS/: fatfs.c
NSPE/WIFI_IOT/app/: CMakeLists.txt  atcmd.c  cmd_rf_test.h  main.c
NSPE/WIFI_IOT/bsp/: bsp_wlan.c  (+3 more)
NSPE/WIFI_IOT/network/iperf3/: CMakeLists.txt  iperf_api.h
PROT/project/: prot_afterbuild.bat
config/: config_gdm32.h  config_gdm32_ntz.h
scripts/flms/: GD32W51x_QSPI.FLM  GD32W51x_QSPI_S.FLM
scripts/images/: image-all.hex  mbl-ns.hex
scripts/imgtool/: download.py
scripts/patch/: pyocd.diff
(+96 files in other folders)
